--- a/.github/workflows/auto-approve-action.yml
+++ b/.github/workflows/auto-approve-action.yml
@@ -1,12 +1,18 @@
 name: Auto approve
 
-on: pull_request_target
+on:
+  workflow_call:
+    inputs:
+      environment:
+  workflow_dispatch:
+    inputs:
+      environment:
 
 jobs:
   auto-approve:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
-    if: github.actor == 'dependabot[bot]'
+    if: github.actor == 'bw0101'
     steps:
       - uses: hmarr/auto-approve-action@v4
