--- a/.github/workflows/auto-approve-action.yml
+++ b/.github/workflows/auto-approve-action.yml
@@ -13,6 +13,8 @@ on:
         description: 'environment'
         type: string
         required: false
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
   auto-approve:
@@ -22,3 +24,5 @@ jobs:
     if: github.actor == 'bw0101'
     steps:
       - uses: hmarr/auto-approve-action@v4
+        with:
+          pull-request-number: ${{ github.event.pull_request.number }}
