--- a/.github/workflows/auto-approve-action.yml
+++ b/.github/workflows/auto-approve-action.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
-    if: github.actor == 'github-actions[bot]'
+    if: github.actor == 'bw0101'
     steps:
       - uses: hmarr/auto-approve-action@v4
         with:
