--- a/.github/workflows/basic-workflow.yml
+++ b/.github/workflows/basic-workflow.yml
@@ -1,28 +1,20 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  pre-steps:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: code checkout
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
@@ -35,6 +27,13 @@ jobs:
           echo 1. Add other actions to build,
           echo 2. test, and deploy your project.
 
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: code checkout
+      - uses: actions/checkout@v4
+
       - name: Setup Java JDK
       - uses: actions/setup-java@v4.6.0
         with:
@@ -42,6 +41,4 @@ jobs:
           java-version: 21
           # Java distribution. See the list of supported distributions in README file
           distribution: 'temurin'
-          # The package type (jdk, jre, jdk+fx, jre+fx)
-          
-          
+        
