--- a/.github/workflows/auto-approve-action.yml
+++ b/.github/workflows/auto-approve-action.yml
@@ -32,7 +32,7 @@ jobs:
         uses: github/codeql-action/analyze@v2
       - name: Auto approve
         if: ${{ success() }}
-      - uses: hmarr/auto-approve-action@v4
+        uses: hmarr/auto-approve-action@v4
         with:
           pull-request-number: ${{ github.event.pull_request.number }}
       - name: Notify              
