--- a/.github/workflows/auto-approve-action.yml
+++ b/.github/workflows/auto-approve-action.yml
@@ -15,17 +15,16 @@ on:
         required: false
   pull_request:
     types: [opened, synchronize, reopened]
+    branches:
+      - main
+      - release/*
 
 jobs:
   auto-approve:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
-#    if: github.actor == 'bw0101'
-# Allow multiple authorized actors by using a list
     if: contains('bw0101,anotherUser', github.actor)
-# Use the environment input to perform environment-specific approvals
-#    if: github.event.inputs.environment == 'production'
 
     steps:
       - name: Run CodeQL Analysis
