--- a/.github/workflows/approve-pr.yml
+++ b/.github/workflows/approve-pr.yml
@@ -56,7 +56,7 @@ jobs:
     if: github.actor == 'bw1010'
     runs-on: ubuntu-latest
     env:
-      # GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       PR_NUMBER: ${{ github.event.pull_request.number }}
     permissions:
       contents: write
