--- a/.github/workflows/approve-prs-21.yml
+++ b/.github/workflows/approve-prs-21.yml
@@ -29,7 +29,7 @@ jobs:
       - name : Notes
         run: |
           echo 1. Info:
-          echo "The tech user is: ${{ secrets.TECH_USER }}"
+          echo The tech user is: ${{ secrets.TECH_USER }}
     
   notes-todos:
     runs-on: ubuntu-latest
@@ -44,6 +44,9 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      PR_NUMBER: ${{ github.event.pull_request.number }}
     steps:
       - uses: actions/checkout@v4
       - name: Approve a PR if not already approved
