--- a/.github/workflows/approve-prs-21.yml
+++ b/.github/workflows/approve-prs-21.yml
@@ -42,11 +42,12 @@ jobs:
 
   autom-approve-pr:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       PR_NUMBER: ${{ github.event.pull_request.number }}
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
       - name: Approve a PR if not already approved
