--- a/.github/workflows/approve-prs-21.yml
+++ b/.github/workflows/approve-prs-21.yml
@@ -63,5 +63,6 @@ jobs:
     permissions:
       contents: write
     steps:
+      - uses: actions/checkout@v4
       - name: Enable auto-merge
         run: gh pr merge --auto --merge "$PR_NUMBER"
