--- a/.github/workflows/approve-pr.yml
+++ b/.github/workflows/approve-pr.yml
@@ -22,13 +22,13 @@ env:
   NODE_VERSION: 22
 
 jobs:          
-  validate:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' &&  github.event.action != 'closed' )
-    uses: bw0101/bee-actions/.github/workflows/auto-approve-action.yml@main
-    with:
-      PR_REPO: ${{ github.event.pull_request.head.repo.full_name || github.repository }}
-      PR_REF: ${{ github.event.pull_request.head.ref || 'main' }}
-    secrets: inherit
+#  validate:
+#    if: github.event_name == 'push' || (github.event_name == 'pull_request' &&  github.event.action != 'closed' )
+#    uses: bw0101/bee-actions/.github/workflows/auto-approve-action.yml@main
+#    with:
+#      PR_REPO: ${{ github.event.pull_request.head.repo.full_name || github.repository }}
+#      PR_REF: ${{ github.event.pull_request.head.ref || 'main' }}
+#    secrets: inherit
 
   check-todos:
     runs-on: ubuntu-latest
