--- a/.github/workflows/auto-approve-action.yml
+++ b/.github/workflows/auto-approve-action.yml
@@ -1,8 +1,14 @@
-name: Auto approve
+name: auto approve action
 
 on:
   workflow_call:
     inputs:
+      PR_REPO:
+        type: string
+        required: true
+      PR_REF:
+        type: string
+        required: true
       environment:
         description: 'environment'
         type: string
@@ -20,6 +26,19 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
+  init: 
+    runs-on: ubuntu-latest
+    steps:
+      - name: Add inputs to Summary
+        if: inputs.PR_REPO
+        run: |
+          {
+            echo "#### Inputs "
+            echo "| Arg          | Value | " 
+            echo "| ____________ | _____ | "
+            echo "| PR_REPO      | ${{ inputs.PR_REPO }} | "
+            echo "| PR_REF       | ${{ inputs.PR_REF }} | "
+          } >> $GITHUB_STEP_SUMMARY
   auto-approve:
     runs-on: ubuntu-latest
     permissions:
