--- a/.github/workflows/auto-approve-action.yml
+++ b/.github/workflows/auto-approve-action.yml
@@ -51,11 +51,23 @@ jobs:
         uses: hmarr/auto-approve-action@v4
         with:
           pull-request-number: ${{ github.event.pull_request.number }}
-      - name: Add inputs to Summary
+          
+      - name: to Summary on success
         if: ${{ success() }}
         run: |
           {
-            echo "#### PR Auto Approve  #### "
+            echo "#### PR Auto Approve on success  #### "
+            echo "| Arg          | Value | " 
+            echo "| ____________ | _____ | "
+            echo "| TECH_USER_SECRET      | ${{ secrets.TECH_USER_SECRET }} | "
+            echo "|              |       | "
+          } >> $GITHUB_STEP_SUMMARY
+
+      - name: to Summary on failure
+        if: ${{ failure() }}
+        run: |
+          {
+            echo "#### PR Auto Approve on failure #### "
             echo "| Arg          | Value | " 
             echo "| ____________ | _____ | "
             echo "| TECH_USER_SECRET      | ${{ secrets.TECH_USER_SECRET }} | "
