--- a/.github/workflows/auto-approve-action.yml
+++ b/.github/workflows/auto-approve-action.yml
@@ -43,7 +43,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
-    if: contains('bw0101,anotherUser,${{ secrets.TECH_USER_SECRET }}', github.actor)
+    if: contains('bw0101,anotherUser', github.actor)
+#   if: contains('bw0101,anotherUser,${{ secrets.TECH_USER_SECRET }}', github.actor)
 
     steps:         
       - name: Auto approve
