--- a/.github/workflows/auto-approve-action.yml
+++ b/.github/workflows/auto-approve-action.yml
@@ -50,11 +50,11 @@ jobs:
     if: contains('bw0101,anotherUser,${{ secrets.TECH_USER_SECRET }}', github.actor)
 
     steps:         
-#      - name: PR approve 1
-#        if: ${{ success() }}
-#        uses: hmarr/auto-approve-action@v4
-#        with:
-#          pull-request-number: ${{ github.event.pull_request.number }}
+      - name: PR approve 1
+        if: ${{ success() }}
+        uses: hmarr/auto-approve-action@v4
+        with:
+          pull-request-number: ${{ github.event.pull_request.number }}
 
 #      - if: github.event_name == 'pull_request' && github.event.action != 'closed'
 #      - name: PR Approve 2
@@ -65,15 +65,15 @@ jobs:
 #          # Secret GitHub API token to use for making API requests.
 #          GITHUB_TOKEN: ${{ github.token }}#
 
-      - if: github.event_name == 'push' || (github.event_name == 'pull_request' &&  github.event.action != 'closed' ) 
-      - uses: actions/checkout@v4
-      - name: PR Approve 3 - Approve a PR if not already approved
-        run: |
-          gh pr checkout "$PR_NUMBER" # sets the upstream metadata for `gh pr status`
-          if [ "$(gh pr status --json reviewDecision -q .currentBranch.reviewDecision)" != "APPROVED" ];
-          then gh pr review --approve "$PR_NUMBER"
-          else echo "PR already approved, skipping additional approvals to minimize emails/notification noise.";
-          fi
-      - name: Enable auto-merge
- #       run: gh pr merge --auto --merge "$PR_NUMBER"
+#      - if: github.event_name == 'push' || (github.event_name == 'pull_request' &&  github.event.action != 'closed' ) 
+#      - uses: actions/checkout@v4
+#      - name: PR Approve 3 - Approve a PR if not already approved
+#        run: |
+#          gh pr checkout "$PR_NUMBER" # sets the upstream metadata for `gh pr status`
+#          if [ "$(gh pr status --json reviewDecision -q .currentBranch.reviewDecision)" != "APPROVED" ];
+#          then gh pr review --approve "$PR_NUMBER"
+#          else echo "PR already approved, skipping additional approvals to minimize emails/notification noise.";
+#          fi
+#      - name: Enable auto-merge
+#        run: gh pr merge --auto --merge "$PR_NUMBER"
 
