--- a/.github/workflows/auto-approve-action.yml
+++ b/.github/workflows/auto-approve-action.yml
@@ -50,20 +50,20 @@ jobs:
     if: contains('bw0101,anotherUser', github.actor)
 
     steps:         
-      - name: PR approve 1
-        if: ${{ success() }}
-        uses: hmarr/auto-approve-action@v4
-        with:
-          pull-request-number: ${{ github.event.pull_request.number }}
-
-#      - if: github.event_name == 'pull_request' && github.event.action != 'closed'
-#      - name: PR Approve 2
-#        # You may pin to the exact commit or the version.
-#        # uses: actions-cool/pr-approve@ac3ebe5106936925c3c656a8cd3d5a89fa8325c0
-#        uses: actions-cool/pr-approve@v0.0.1-beat
+#      - name: PR approve 1
+#        if: ${{ success() }}
+#        uses: hmarr/auto-approve-action@v4
 #        with:
-#          # Secret GitHub API token to use for making API requests.
-#          GITHUB_TOKEN: ${{ github.token }}#
+#          pull-request-number: ${{ github.event.pull_request.number }}
+
+      - if: github.event_name == 'pull_request' && github.event.action != 'closed'
+      - name: PR Approve 2
+        # You may pin to the exact commit or the version.
+        # uses: actions-cool/pr-approve@ac3ebe5106936925c3c656a8cd3d5a89fa8325c0
+        uses: actions-cool/pr-approve@v0.0.1-beat
+        with:
+          # Secret GitHub API token to use for making API requests.
+          GITHUB_TOKEN: ${{ github.token }}#
 
 #      - if: github.event_name == 'push' || (github.event_name == 'pull_request' &&  github.event.action != 'closed' ) 
 #      - uses: actions/checkout@v4
