--- a/.github/workflows/auto-approve-action.yml
+++ b/.github/workflows/auto-approve-action.yml
@@ -36,13 +36,15 @@ jobs:
       - name: Add inputs to Summary
         if: inputs.PR_REPO
         run: |
-          {
-            echo "#### Inputs "
+          echo "#### Inputs "
             echo "| Arg          | Value | " 
             echo "| ____________ | _____ | "
             echo "| PR_REPO      | ${{ inputs.PR_REPO }} | "
-            echo "| PR_REF       | ${{ inputs.PR_REF }} | "
-          } >> $GITHUB_STEP_SUMMARY
+            echo "| Tech user    | $TECH_USER_SECRET | "
+            echo "| PR_REF       | ${{ inputs.PR_REF }} | "       
+ #         {
+            
+ #         } >> $GITHUB_STEP_SUMMARY
   auto-approve:
     runs-on: ubuntu-latest
     env:
