--- a/.github/workflows/action-pr-approve.yml
+++ b/.github/workflows/action-pr-approve.yml
@@ -15,7 +15,7 @@ jobs:
     name: Init process
     env:
       TECH_USER_SECRET: ${{ secrets.TECH_USER_SECRET }}
-      TECH_USER: ${{ variables.TECH_USER }}
+      TECH_USER: ${{ vars.TECH_USER }}
       URL: 'http://dev.app.com'
       ENVIRONMENT: 'dev'
     runs-on: ubuntu-latest
@@ -28,7 +28,7 @@ jobs:
           echo "| PR_REPO       | ${{ inputs.PR_REPO }} | "
           echo "| Tech user sec | $TECH_USER_SECRET | "
           echo "| Tech user     | $TECH_USER | "    
-          echo "| Tech user var | ${{ variables.TECH_USER }} | " 
+          echo "| Tech user var | ${{ vars.TECH_USER }} | " 
           echo "| URL           | $URL | " 
           echo "| ENVIRONMENT   | $ENVIRONMENT | " 
 
