--- a/.github/workflows/action-pr-approve.yml
+++ b/.github/workflows/action-pr-approve.yml
@@ -31,7 +31,7 @@ jobs:
           echo "| Tech user var | ${{ vars.TECH_USER }} | " 
           echo "| URL           | $URL | " 
           echo "| ENVIRONMENT   | $ENVIRONMENT | " 
-          git diff --name-only origin/main
+          git --version
           echo " _________________________"
 
   auto-approve:
