--- a/.github/workflows/action-pr-approve.yml
+++ b/.github/workflows/action-pr-approve.yml
@@ -73,12 +73,12 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const output = `#### Pull-request processed
-            > PR  $PR_NUMBER has been processed
+            > PR  has been processed
             
             URL: http://${{ steps.apply_output.outputs.stdout }}`;
   
             github.rest.issues.createComment({
-              issue_number: $PR_NUMBER,
+              issue_number: ${{ github.event.pull_request.number }},
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: output
