--- a/.github/workflows/action-pr-approve.yml
+++ b/.github/workflows/action-pr-approve.yml
@@ -68,14 +68,14 @@ jobs:
     # with the results of the apply.
     # ======================================================      
       - name: Update status
-        uses: actions/github-script@v5
+        uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const output = `#### Pull-request processed
-            > PR  has been processed
+            > PR #$PR_NUMBER has been processed
             
-            URL: http://${{ steps.apply_output.outputs.stdout }}`;
+            URL: http://$URL`;
   
             github.rest.issues.createComment({
               issue_number: ${{ github.event.pull_request.number }},
