--- a/.github/workflows/action-pr-approve.yml
+++ b/.github/workflows/action-pr-approve.yml
@@ -50,6 +50,7 @@ jobs:
       # ${{ steps.verify_pr_number.outputs.result }}
       # ======================================================
       - name: Verify Pull Request Number
+        if: github.event_name == 'pull_request' && contains( 'bw0101NOT, $TECH_USER' )
         uses: actions/github-script@v7
         id: verify_pr_number
         with:
