--- a/.github/workflows/action-pr-approve.yml
+++ b/.github/workflows/action-pr-approve.yml
@@ -70,8 +70,8 @@ jobs:
             }  
   
   auto-approve:
-    name: Auto approve of PR 
-    if: github.event_name == 'pull_request' && contains( 'bw0101, $TECH_USER', github.actor )
+    name: Auto approve of PR     
+    if: github.event_name == 'pull_request' && github.actor == vars.TECH_USER
     runs-on: ubuntu-latest
     needs: init
     environment:
