--- a/.github/workflows/action-pr-approve.yml
+++ b/.github/workflows/action-pr-approve.yml
@@ -71,7 +71,7 @@ jobs:
   
   auto-approve:
     name: Auto approve of PR     
-    if: github.event_name == 'pull_request' && github.actor == vars.TECH_USER
+    if: github.event_name == 'pull_request' && github.actor == 'bw0101'
     runs-on: ubuntu-latest
     needs: init
     environment:
